--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         increase your sales
       </p>
       <button>Open your shop</button>
-      <figure class="header-img-container">
+      <figure class="header__container">
         <img
-          class="header-img"
+          class="header__container__img"
           src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
         />
       </figure>
@@ -52,50 +52,46 @@
           country
         </h3>
 
-        <article class="card_section1">
-          <div class="container_icons">
-            <div class="pink">
-              <div class="container_vectors">
-                <img class="head" src="./images/vectort_head.png" />
-                <img class="body" src="./images/vector_body.png" />
+        <article class="section1__card">
+          <div class="section1__card__container">
+              <img class="section1__card__container__circle" src="./images/circle_pink.png" />
+              <div class="section1__card__container__vectors">
+                <img class="section1__card__container__vectors__head" src="./images/vectort_head.png" />
+                <img class="section1__card__container__vectors__body" src="./images/vector_body.png" />
+              </div>
+            </div>
+            <p class="section1__card__title"><strong>100000+</strong></p>
+            <p class="section1__card__text">daily entries</p>
+          </article>
+          
+          <article class="section1__card">
+            <div class="section1__card__container">
+              <img class="section1__card__container__circle" src="./images/circle_blue.png" />
+              <div class="section1__card__container__vectors">
+                <img class="section1__card__container__vectors__eye1" src="./images/vector_eye1.png" />
+                <img class="section1__card__container__vectors__eye2" src="./images/vector_eye2.png" />
+                <img class="section1__card__container__vectors__eye3" src="./images/vector_eye3.png" />
               </div>
             </div>
           </div>
-          <p class="title"><strong>100000+</strong></p>
-          <p class="text">daily entries</p>
+        </div>
+          <p class="section1__card__title"><strong>2000000+</strong></p>
+          <p class="section1__card__text">seen products every day</p>
         </article>
-
-        <article class="card_section1">
-          <div class="container_icons">
-            <div class="blue">
-              <div class="container_vectors">
-                <div class="container_vectors">
-                  <img class="eye1" src="./images/vector_eye1.png" />
-                  <img class="eye2" src="./images/vector_eye2.png" />
-                  <img class="eye3" src="./images/vector_eye3.png" />
+        
+        <article class="section1__card">
+          <div class="section1__card__container">
+            <img class="section1__card__container__circle" src="./images/circle_green.png" />
+              <div class="section1__card__container__vectors">
+                  <img class="section1__card__container__vectors__box1" src="./images/vector_box1.png" />
+                  <img class="section1__card__container__vectors__box2" src="./images/vector_box2.png" />
+                  <img class="section1__card__container__vectors__box3" src="./images/vector_box3.png" />
+                  <img class="section1__card__container__vectors__box4" src="./images/vector_box4.png" />
                 </div>
-              </div>
             </div>
           </div>
-          <p class="title"><strong>2000000+</strong></p>
-          <p class="text">seen products every day</p>
-        </article>
-
-        <article class="card_section1">
-          <div class="container_icons">
-            <div class="green">
-              <div class="container_vectors">
-                <div class="container_vectors">
-                  <img class="box1" src="./images/vector_box1.png" />
-                  <img class="box2" src="./images/vector_box2.png" />
-                  <img class="box3" src="./images/vector_box3.png" />
-                  <img class="box4" src="./images/vector_box4.png" />
-                </div>
-              </div>
-            </div>
-          </div>
-          <p class="title"><strong>10000+</strong></p>
-          <p class="text">added posts daily</p>
+          <p class="section1__card__title"><strong>10000+</strong></p>
+          <p class="section1__card__text">added posts daily</p>
         </article>
       </section>
 
@@ -131,7 +127,7 @@
           <figure class="section2__card1__containerImg1">
             <img
               class="section2__card1__containerImg1__circleBlue"
-              src="/images/section2_circle_blue.png"
+              src="/images/circle_blue.png"
             />
             <img
               class="section2__card1__containerImg1__mobile"
