--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <button>Open your shop</button>
       <figure class="header__container">
         <img
+          alt="home desktop"
           class="header__container__img"
           src="https://s3-alpha-sig.figma.com/img/c3f9/6a42/6648411f57f04aff84de5d247f55d2a8?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=U2XCLt6kDyMZigQk5C~lG2UxWdd0BZJkkcGxw5KajmQ5CJ8ALYFTTYmTy1Z5Ykwqj2Ib4A1bIXBaRlmQ-QfxgGf9zoYOSklKqnOrFA7qHeprpCZP4IajK25uBCtXkFbXBSd5XnQZC7IVr~IWu~vZ1lCNE7qjjbf~04bhHNt2hQWRNeKGrsCwV~aGtUgkK0hO6HxsaYPF4TeRKQePeQ7Wfn5Mg9r1NtxgRJJqJDQa1ss6wg97lIxTio18meDSeUOlqLRYoMouyc15MbjLnwgK4KT-Q6zggXf0~PvfZZ3eiHpVwzYyGza9T-~L8J4T~mUT1qftN7Sp2CPBMrBMKVgUQw__"
         />
@@ -54,40 +55,73 @@
 
         <article class="section1__card">
           <div class="section1__card__container">
-              <img class="section1__card__container__circle" src="./images/circle_pink.png" />
-              <div class="section1__card__container__vectors">
-                <img class="section1__card__container__vectors__head" src="./images/vectort_head.png" />
-                <img class="section1__card__container__vectors__body" src="./images/vector_body.png" />
-              </div>
-            </div>
-            <p class="section1__card__title"><strong>100000+</strong></p>
-            <p class="section1__card__text">daily entries</p>
-          </article>
-          
-          <article class="section1__card">
-            <div class="section1__card__container">
-              <img class="section1__card__container__circle" src="./images/circle_blue.png" />
-              <div class="section1__card__container__vectors">
-                <img class="section1__card__container__vectors__eye1" src="./images/vector_eye1.png" />
-                <img class="section1__card__container__vectors__eye2" src="./images/vector_eye2.png" />
-                <img class="section1__card__container__vectors__eye3" src="./images/vector_eye3.png" />
-              </div>
+            <img
+              class="section1__card__container__circle"
+              src="./images/circle_pink.png"
+            />
+            <div class="section1__card__container__vectors">
+              <img
+                class="section1__card__container__vectors__head"
+                src="./images/vectort_head.png"
+              />
+              <img
+                class="section1__card__container__vectors__body"
+                src="./images/vector_body.png"
+              />
             </div>
           </div>
-        </div>
+          <p class="section1__card__title"><strong>100000+</strong></p>
+          <p class="section1__card__text">daily entries</p>
+        </article>
+
+        <article class="section1__card">
+          <div class="section1__card__container">
+            <img
+              class="section1__card__container__circle"
+              src="./images/circle_blue.png"
+            />
+            <div class="section1__card__container__vectors">
+              <img
+                class="section1__card__container__vectors__eye1"
+                src="./images/vector_eye1.png"
+              />
+              <img
+                class="section1__card__container__vectors__eye2"
+                src="./images/vector_eye2.png"
+              />
+              <img
+                class="section1__card__container__vectors__eye3"
+                src="./images/vector_eye3.png"
+              />
+            </div>
+          </div>
           <p class="section1__card__title"><strong>2000000+</strong></p>
           <p class="section1__card__text">seen products every day</p>
         </article>
-        
+
         <article class="section1__card">
           <div class="section1__card__container">
-            <img class="section1__card__container__circle" src="./images/circle_green.png" />
-              <div class="section1__card__container__vectors">
-                  <img class="section1__card__container__vectors__box1" src="./images/vector_box1.png" />
-                  <img class="section1__card__container__vectors__box2" src="./images/vector_box2.png" />
-                  <img class="section1__card__container__vectors__box3" src="./images/vector_box3.png" />
-                  <img class="section1__card__container__vectors__box4" src="./images/vector_box4.png" />
-                </div>
+            <img
+              class="section1__card__container__circle"
+              src="./images/circle_green.png"
+            />
+            <div class="section1__card__container__vectors">
+              <img
+                class="section1__card__container__vectors__box1"
+                src="./images/vector_box1.png"
+              />
+              <img
+                class="section1__card__container__vectors__box2"
+                src="./images/vector_box2.png"
+              />
+              <img
+                class="section1__card__container__vectors__box3"
+                src="./images/vector_box3.png"
+              />
+              <img
+                class="section1__card__container__vectors__box4"
+                src="./images/vector_box4.png"
+              />
             </div>
           </div>
           <p class="section1__card__title"><strong>10000+</strong></p>
@@ -107,6 +141,7 @@
               src="./images/rectangle_pink_pc.png"
             />
             <img
+              alt="pc"
               class="section2__card1__containerImg1__pc"
               src="./images/img_pc.png"
             />
@@ -130,16 +165,17 @@
               src="/images/circle_blue.png"
             />
             <img
+              alt="mobile phone"
               class="section2__card1__containerImg1__mobile"
               src="/images/img_iPhone.png"
             />
           </figure>
           <div class="section2__card1__containerText1">
-            <p class="section2__card1__containerText1__title">
+            <p class="section2__card1__containerText1__title2">
               Your shop is<br />
               where you are!
             </p>
-            <p class="section2__card1__containerText1__text">
+            <p class="section2__card1__containerText1__text2">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam.
@@ -154,12 +190,15 @@
             </p>
             <p class="section2__card2__containerText2__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut <br />labore et dolore magna aliqua.
-              Ut enim ad minim veniam.
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam.
             </p>
           </div>
           <figure class="section2__card2__containerImg2">
-            <img src="/images/rectangle_green.png" />
+            <img
+              class="section2__card2__containerImg2__backgroundGreen"
+              src="/images/rectangle_green.png"
+            />
             <img
               class="section2__card2__containerImg2__megaphone"
               src="/images/trumpet.png"
