--- a/index.html
+++ b/index.html
@@ -453,17 +453,13 @@
 
     <footer>
       <div class="pack">
-        <h2 class="logo_Oxygen">OXYGENShop</h2>
+        <h2 class="pack__oxygen">OXYGENShop</h2>
         <p class="pack__copyright">© 2022 OXYGEN, All Rights Reserved</p>
       </div>
       <div class="pack__logos">
         <div class="x">
           <img class="bird" src="./images/icon_x.png" />
           <img class="facebook" src="./images/icon_facebook.png" />
-        </div>
-        <div class="facebook">
-          <img />
-          <img />
         </div>
       </div>
     </footer>
