finish mobile nav

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <nav>
       <h2 class="logo_Oxygen">OXYGENShop</h2>
       <figure class="menu">
-        <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
-        <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
-        <img class="rectangle-menu" src="./images/vector_rectangle_menu.png" />
+        <img class="menu__rectangle" src="./images/nav_menu.png" />
       </figure>
       <ul>
         <li><a>WHY US</a></li>
