desktop nav done

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 
   <body>
     <nav>
-      <h2 class="logo_Oxygen">OXYGENShop</h2>
-      <figure class="menu">
-        <img class="menu__rectangle" src="./images/nav_menu.png" />
-      </figure>
-      <ul>
-        <li><a>WHY US</a></li>
-        <li><a>BENEFITS</a></li>
-        <li><a>PRICES</a></li>
-        <li><a>CONTACT</a></li>
-      </ul>
+      <div class="limit">
+        <h2 class="limit__logo">OXYGENShop</h2>
+        <figure class="menu">
+          <img class="menu__rectangle" src="./images/nav_menu.png" />
+        </figure>
+        <ul>
+          <li><a>WHY US</a></li>
+          <li><a>BENEFITS</a></li>
+          <li><a>PRICES</a></li>
+          <li><a>CONTACT</a></li>
+        </ul>
+      </div>
     </nav>
 
     <header>
