desktop section4 finished

--- a/index.html
+++ b/index.html
@@ -231,9 +231,7 @@
               <p class="section3__card3__containerPrice__basic">
                 <strong>Basic</strong>
               </p>
-              <p class="section3__card3__containerPrice__price">
-                $0
-              </p>
+              <p class="section3__card3__containerPrice__price">$0</p>
             </div>
 
             <div class="section3__card3__containerFeature">
@@ -261,29 +259,19 @@
               </div>
 
               <div class="section3__card3__containerFeature__text">
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   100 MB HDD
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   1 Subdomain
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   2 E-mails
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   Two years license
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   Full support
                 </p>
               </div>
@@ -297,9 +285,7 @@
               <p class="section3__card3__containerPrice__basic">
                 <strong>Profesional</strong>
               </p>
-              <p class="section3__card3__containerPrice__price">
-                $25
-              </p>
+              <p class="section3__card3__containerPrice__price">$25</p>
               <p class="section3__card3__containerPrice__subtitle">
                 Limited offer
               </p>
@@ -330,29 +316,19 @@
               </div>
 
               <div class="section3__card3__containerFeature__text">
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   500 MB HDD
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   2 Subdomain
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   5 E-mails
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   One years license
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   Full support
                 </p>
               </div>
@@ -366,9 +342,7 @@
               <p class="section3__card3__containerPrice__basic">
                 <strong>Premium</strong>
               </p>
-              <p class="section3__card3__containerPrice__price">
-                $60
-              </p>
+              <p class="section3__card3__containerPrice__price">$60</p>
               <p class="section3__card3__containerPrice__subtitle">
                 Limited offer
               </p>
@@ -399,29 +373,19 @@
               </div>
 
               <div class="section3__card3__containerFeature__text">
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   2 GB HDD
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   5 Subdomain
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   20 E-mails
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   Two years license
                 </p>
-                <p
-                  class="section3__card3__containerFeature__text__title"
-                >
+                <p class="section3__card3__containerFeature__text__title">
                   Full support
                 </p>
               </div>
@@ -487,14 +451,12 @@
             <div class="section4__form__terms">
               <input class="section4__form__terms__checkbox" type="checkbox" />
               <p class="section4__form__terms__text">
-                I hereby give consent for my personal data <br />
-                included in my application to be processed for <br />
-                the purposes of the recruitment process under <br />
-                the European Parliament’s and Council of the <br />
-                European Union Regulation on the Protection of <br />
-                Natural Persons as of 27 April 2016, with regard <br />
-                to the processing of personal data and on the <br />
-                free movement of such data, and repealing <br />
+                I hereby give consent for my personal data included in my
+                application to be processed for the purposes of the recruitment
+                process under the European Parliament’s and Council of the
+                European Union Regulation on the Protection of Natural Persons
+                as of 27 April 2016, with regard to the processing of personal
+                data and on the free movement of such data, and repealing
                 Directive 95/46/EC (Data Protection Directive)
               </p>
               <button>Send</button>
