desktop section2 finished

--- a/index.html
+++ b/index.html
@@ -163,33 +163,33 @@
             </div>
           </article>
 
-          <article class="section2__card1">
-            <figure class="section2__card1__containerImg1">
+          <article class="section2__card2row">
+            <figure class="section2__card2row__containerImg1">
               <img
-                class="section2__card1__containerImg1__circleBlue"
+                class="section2__card2row__containerImg1__circleBlue"
                 src="/images/circle_blue.png"
               />
               <img
-                class="section2__card1__containerImg1__circleBluePc"
+                class="section2__card2row__containerImg1__circleBluePc"
                 src="/images/circle_blue_pc.png"
               />
               <img
                 alt="mobile phone"
-                class="section2__card1__containerImg1__mobile"
+                class="section2__card2row__containerImg1__mobile"
                 src="/images/img_iPhonePc.png"
               />
             </figure>
-            <div class="section2__card1__containerText1">
-              <p class="section2__card1__containerText1__title2">
+            <div class="section2__card2row__containerText1">
+              <p class="section2__card2row__containerText1__title2">
                 Your shop is<br />
                 where you are!
               </p>
-              <p class="section2__card1__containerText1__text">
+              <p class="section2__card2row__containerText1__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam.
               </p>
-              <div class="section2__card1__containerText1__lineBlue"></div>
+              <div class="section2__card2row__containerText1__lineBlue"></div>
             </div>
           </article>
 
@@ -225,7 +225,7 @@
 
       <section class="section3">
         <h3>Pricing</h3>
-        <div class="limit">
+        <div class="limit3">
           <article class="section3__card3">
             <div class="section3__card3__containerPrice">
               <p class="section3__card3__containerPrice__basic">
@@ -233,7 +233,45 @@
               </p>
               <p class="section3__card3__containerPrice__price">$0</p>
             </div>
-
+            <!-- ///////////////////////////////////////////// -->
+            <!-- <div class="section3__card3__containerInputsFeature">
+                <img
+                  class="section3__card3__containerFeature__input__checkbox"
+                  src="/images/Checkbox.png"
+                />
+                <p class="section3__card3__containerFeature__text__title">
+                  100 MB HDD
+                </p>
+                <img
+                  class="section3__card3__containerFeature__input__checkbox"
+                  src="/images/Checkbox.png"
+                />
+                <p class="section3__card3__containerFeature__text__title">
+                  1 Subdomain
+                </p>
+                <img
+                  class="section3__card3__containerFeature__input__checkbox"
+                  src="/images/Checkbox.png"
+                />
+                <p class="section3__card3__containerFeature__text__title">
+                  2 E-mails
+                </p>
+                <img
+                  class="section3__card3__containerFeature__input__checkbox"
+                  src="/images/Cross.png"
+                />
+                <p class="section3__card3__containerFeature__text__title">
+                  Two years license
+                </p>
+                <img
+                  class="section3__card3__containerFeature__input__checkbox"
+                  src="/images/Cross.png"
+                />
+                <p class="section3__card3__containerFeature__text__title">
+                  Full support
+                </p>
+              </div> -->
+<!--  -->
             <div class="section3__card3__containerFeature">
               <div class="section3__card3__containerFeature__input">
                 <img
@@ -275,6 +313,7 @@
                   Full support
                 </p>
               </div>
+              <div class="section3__card3__containerFeature__text"></div>
 
               <button class="section3__card3__button">Begin</button>
             </div>
