mobile section3 finish

--- a/index.html
+++ b/index.html
@@ -225,108 +225,57 @@
 
       <section class="section3">
         <h3>Pricing</h3>
+
         <div class="limit3">
+
           <article class="section3__card3">
             <div class="section3__card3__containerPrice">
               <p class="section3__card3__containerPrice__basic">
                 <strong>Basic</strong>
               </p>
               <p class="section3__card3__containerPrice__price">$0</p>
-            </div>
-            <!-- ///////////////////////////////////////////// -->
-            <div class="section3__card3__containerInputsFeature">
-              <div class="section3__card3__containerInputsFeature__pack">
-                <img
-                  class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
-                />
-                <p class="section3__card3__containerFeature__text__title">
-                  100 MB HDD
-                </p>
-              </div>
-              <div class="section3__card3__containerInputsFeature__pack">
-                <img
-                  class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
-                />
-                <p class="section3__card3__containerFeature__text__title">
-                  1 Subdomain
-                </p>
-              </div>
-              <div class="section3__card3__containerInputsFeature__pack">
-                <img
-                  class="section3__card3__containerFeature__input"
-                  src="/images/Checkbox.png"
-                />
-                <p class="section3__card3__containerFeature__text__title">
-                  2 E-mails
-                </p>
-              </div>
-              <div class="section3__card3__containerInputsFeature__pack">
-                <img
-                  class="section3__card3__containerFeature__input"
-                  src="/images/Cross.png"
-                />
-                <p class="section3__card3__containerFeature__text__title">
-                  Two years license
-                </p>
-              </div>
-              <div class="section3__card3__containerInputsFeature__pack">
-                <img
-                  class="section3__card3__containerFeature__input"
-                  src="/images/Cross.png"
-                />
-                <p class="section3__card3__containerFeature__text__title">
-                  Full support
-                </p>
-              </div>
-            </div>
-            <!--  -->
-            <!-- <div class="section3__card3__containerFeature">
-              <div class="section3__card3__containerFeature__input">
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
-                />
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
-                />
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
-                />
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Cross.png"
-                />
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Cross.png"
-                />
-              </div>
+              <p class="section3__card3__containerPrice__subtitle">&nbsp;</p>
 
-              <div class="section3__card3__containerFeature__text">
-                <p class="section3__card3__containerFeature__text__title">
-                  100 MB HDD
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  1 Subdomain
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  2 E-mails
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  Two years license
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  Full support
-                </p>
-              </div>
-              <div class="section3__card3__containerFeature__text"></div>
-
-              <button class="section3__card3__button">Begin</button>
-            </div> -->
+            </div>
+            
+            <ul class="section3__card3__containerFeature">
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Checkbox.png"
+                />
+                100 MB HDD
+              </li>
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Checkbox.png"
+                />
+                1 Subdomain
+              </li>
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Checkbox.png"
+                />
+                2 E-mails
+              </li>
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Cross.png"
+                />
+                Two years license
+              </li>
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Cross.png"
+                />
+                Full support
+              </li>
+            </ul>
+            <button class="section3__card3__button">Begin</button>
           </article>
 
           <article class="section3__card3">
@@ -340,50 +289,44 @@
               </p>
             </div>
 
-            <div class="section3__card3__containerFeature">
-              <div class="section3__card3__containerFeature__input">
+            <ul class="section3__card3__containerFeature">
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Checkbox.png"
+                />
+                500 MB HDD
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
+                2 Subdomain
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
+                5 E-mails
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
-                />
+                One years license
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Cross.png"
                 />
-              </div>
-
-              <div class="section3__card3__containerFeature__text">
-                <p class="section3__card3__containerFeature__text__title">
-                  500 MB HDD
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  2 Subdomain
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  5 E-mails
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  One years license
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  Full support
-                </p>
-              </div>
-
-              <button class="section3__card3__button">Begin</button>
-            </div>
+                Full support
+              </li>
+            </ul>
+            <button class="section3__card3__button">Begin</button>
           </article>
 
           <article class="section3__card3">
@@ -397,50 +340,44 @@
               </p>
             </div>
 
-            <div class="section3__card3__containerFeature">
-              <div class="section3__card3__containerFeature__input">
+            <ul class="section3__card3__containerFeature">
+              <li>
+                <img
+                  class="section3__card3__containerFeature__input"
+                  src="/images/Checkbox.png"
+                />
+                2 GB HDD
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
+                5 Subdomain
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
+                20 E-mails
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
+                Two years license
+              </li>
+              <li>
                 <img
                   class="section3__card3__containerFeature__input__checkbox"
                   src="/images/Checkbox.png"
                 />
-                <img
-                  class="section3__card3__containerFeature__input__checkbox"
-                  src="/images/Checkbox.png"
-                />
-              </div>
-
-              <div class="section3__card3__containerFeature__text">
-                <p class="section3__card3__containerFeature__text__title">
-                  2 GB HDD
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  5 Subdomain
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  20 E-mails
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  Two years license
-                </p>
-                <p class="section3__card3__containerFeature__text__title">
-                  Full support
-                </p>
-              </div>
-
-              <button class="section3__card3__button">Begin</button>
-            </div>
+                Full support
+              </li>
+            </ul>
+            <button class="section3__card3__button">Begin</button>
           </article>
         </div>
       </section>
