header, section1 & section2 finished

--- a/index.html
+++ b/index.html
@@ -163,33 +163,33 @@
             </div>
           </article>
 
-          <article class="section2__card2row">
-            <figure class="section2__card2row__containerImg1">
+          <article class="section2__card2">
+            <figure class="section2__card2__containerImg2">
               <img
-                class="section2__card2row__containerImg1__circleBlue"
+                class="section2__card2__containerImg2__circleBlue"
                 src="/images/circle_blue.png"
               />
               <img
-                class="section2__card2row__containerImg1__circleBluePc"
+                class="section2__card2__containerImg2__circleBluePc"
                 src="/images/circle_blue_pc.png"
               />
               <img
                 alt="mobile phone"
-                class="section2__card2row__containerImg1__mobile"
+                class="section2__card2__containerImg2__mobile"
                 src="/images/img_iPhonePc.png"
               />
             </figure>
-            <div class="section2__card2row__containerText">
-              <p class="section2__card2row__containerText__title">
+            <div class="section2__card2__containerText">
+              <p class="section2__card2__containerText__title">
                 Your shop is<br />
                 where you are!
               </p>
-              <p class="section2__card2row__containerText__text">
+              <p class="section2__card2__containerText__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
                 enim ad minim veniam.
               </p>
-              <div class="section2__card2row__containerText__lineBlue"></div>
+              <div class="section2__card2__containerText__lineBlue"></div>
             </div>
           </article>
 
@@ -214,10 +214,6 @@
                 class="section2__card3__containerImg__megaphone"
                 src="/images/trumpet.png"
               />
-              <!-- <img
-              class="section2__card2__containerImg2__backgroundGreenPc"
-              src="/images/backgroundGreenPC.png"
-              /> -->
             </figure>
           </article>
         </div>
