desktop section4 finished

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 class="section4__header__contact__pack__text"
                 href="https://www.linkedin.com/in/alejandrogarciacarmona/"
               >
-                Alejandro García Carmona
+                Alejandro G.C.
               </a>
             </div>
           </div>
